# inspire-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md
.devin/: wiki.json
.github/workflows/: ci.yml
benches/: ntt.rs  packing.rs  query_size_latency.rs  respond.rs
docs/: COMMUNICATION_COSTS.md  GOOGLE_ALIGNMENT.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPARISON.md  PIR_COMPARISON.md  index.html  inspire_paper.json  packing-keys-kanban.md  protocol-visualization.html
examples/: benchmark_seed_expansion.rs  benchmark_variants.rs  generate_test_data.rs  query_sepolia.rs  query_size_comparison.rs
src/: lib.rs  modulus_switch.rs  params.rs
src/ethereum_db/: adapter.rs  mapping.rs  mod.rs  state_format.rs
src/inspiring/: automorph_pack.rs  collapse.rs  collapse_one.rs  inspiring2.rs  mod.rs  pack.rs  simple_pack.rs  transform.rs  types.rs
src/ks/: mod.rs  setup.rs  switch.rs
src/lwe/: enc.rs  mod.rs  types.rs
src/math/: crt.rs  gaussian.rs  mod.rs  mod_q.rs  modular.rs  ntt.rs  poly.rs  sampler.rs  sampling.rs
src/pir/: encode_db.rs  error.rs  eval_poly.rs  extract.rs  mmap.rs  mod.rs  query.rs  respond.rs  setup.rs  sqrt_n.rs
src/rgsw/: external_product.rs  mod.rs  types.rs
src/rlwe/: enc.rs  galois.rs  mod.rs  types.rs
tests/: e2e_pir.rs  ethereum_format.rs  http_inspiring.rs
