[package]
name = "inspire-pir"
version = "0.1.0"
edition = "2021"
description = "InsPIRe: Communication-Efficient PIR with Server-side Preprocessing"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web server
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"

# Parallelism
rayon = "1.10"

# Memory mapping
memmap2 = "0.9"

# Cryptographic primitives
rand = "0.8"
rand_chacha = "0.3"

# Progress
indicatif = "0.17"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Hex encoding
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "packing"
harness = false

[[bin]]
name = "inspire-server"
path = "src/bin/server.rs"

[[bin]]
name = "inspire-client"
path = "src/bin/client.rs"

[[bin]]
name = "inspire-setup"
path = "src/bin/setup.rs"

[[test]]
name = "e2e_pir"
path = "tests/e2e_pir.rs"
