[package]
name = "inspire-pir"
version = "0.1.0"
edition = "2021"
description = "InsPIRe: Communication-Efficient PIR with Server-side Preprocessing"
license = "MIT OR Apache-2.0"

[features]
default = ["server", "cli"]
server = ["axum", "tokio", "memmap2", "reqwest"]
cli = ["clap", "eyre", "tracing-subscriber", "indicatif"]

[dependencies]
# CLI (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
eyre = { version = "0.6", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Web server (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1.36", features = ["full"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.5"

# Parallelism
rayon = "1.10"

# Memory mapping (optional, not available in WASM)
memmap2 = { version = "0.9", optional = true }

# Cryptographic primitives
rand = "0.8"
rand_chacha = "0.3"

# Progress (optional)
indicatif = { version = "0.17", optional = true }

# HTTP client (optional)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Hex encoding
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "ntt"
harness = false

[[bench]]
name = "packing"
harness = false

[[bench]]
name = "respond"
harness = false

[[bin]]
name = "inspire-server"
path = "src/bin/server.rs"
required-features = ["server", "cli"]

[[bin]]
name = "inspire-client"
path = "src/bin/client.rs"
required-features = ["cli"]

[[bin]]
name = "inspire-setup"
path = "src/bin/setup.rs"
required-features = ["server", "cli"]

[[test]]
name = "e2e_pir"
path = "tests/e2e_pir.rs"

[[example]]
name = "generate_test_data"
path = "examples/generate_test_data.rs"
